agregue suscripcion, cambie la cabecera maestra y puse todo azul

--- a/blogpost.html
+++ b/blogpost.html
@@ -11,7 +11,7 @@
         <div id="cabecera">
           Hyperblog
           <span id="tagline">
-             Tu blog de confianza
+             Tu blog maestro
           </span>
         </div>
         <div id="post">
@@ -26,6 +26,7 @@
               un rockstar. Pero estadisticamente no lo eres... por ahora.
 
           </p>
+          <p>Suscribete y dale like</p>
 
         </div>
       </div>
