--- a/blogpost.html
+++ b/blogpost.html
@@ -2,7 +2,7 @@
 <html>
     <head>
  
-         <title>El titulo del post</title>
+         <title>Bienvenido a Hyoerblog 2.0</title>
          <link rel="stylesheet" href="css/estilos.css">
     </head>
     <body>
