--- a/blogpost.html
+++ b/blogpost.html
@@ -2,13 +2,14 @@
 <html>
     <head>
  
-         <title>Bienvenido a Hyoerblog 2.0</title>
+         <title>Bienvenido a Hyperblog 2.0</title>
          <link rel="stylesheet" href="css/estilos.css">
     </head>
     <body>
 
       <div id="container">
         <div id="cabecera">
+          <img id="logo" src="imagenes/dragon.png">
           Hyperblog
           <span id="tagline">
              Tu blog de cabecera
