--- a/blogpost.html
+++ b/blogpost.html
@@ -27,7 +27,7 @@
               un rockstar. Pero estadisticamente no lo eres... por ahora.
 
           </p>
-          <p>Suscribete y dale like</p>
+          <p>Suscribete y dale likee</p>
 
         </div>
       </div>
